[tool.poetry]
name = "poetry config"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "3.2.15"
djangorestframework = "^3.13.1"
dj-database-url = "^1.0.0"
python-dotenv = "^0.20.0"
docker = "^5.0.3"
psycopg2 = "^2.9.3"
django-filter = "^22.1"
factory-boy = "^3.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
